fix minor reply formatting
after fixing the smaller displays from cutting text off, i forgot to also move the reply over as well leaving some weird gap between the reply button and the initial reply panel

--- a/Assets/styles/forum.css
+++ b/Assets/styles/forum.css
@@ -60,6 +60,7 @@
   bottom: 5px;
   border: 1px solid #444;
   border-radius: 10px;
+  transform: translateX(1%);
 }
 
 #reply-textbox {
